--- a/vite/index.html
+++ b/vite/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://cdn.emoji.yajium.day/smilieys/1.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Microsoft 3D Emoji Picker Demo</title>
   </head>
   <body>
     <div id="root" class="bg-orange-100 min-h-screen"></div>
