--- a/vite/index.html
+++ b/vite/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://cdn.emoji.yajium.day/smilieys/1.png"
+      href="https://cdn.emoji.yajihum.dev/smilieys/1.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Microsoft 3D Emoji Picker Demo</title>
